Add pot size and state

--- a/DeusExMachina.vcxproj
+++ b/DeusExMachina.vcxproj
@@ -153,6 +153,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DeusExMachina.h" />
+    <ClInclude Include="eval\Constants.h" />
+    <ClInclude Include="eval\Deckcards.h" />
+    <ClInclude Include="eval\FlushCheck.h" />
+    <ClInclude Include="eval\FlushRanks.h" />
+    <ClInclude Include="eval\RankHash.h" />
+    <ClInclude Include="eval\RankOffsets.h" />
+    <ClInclude Include="eval\SevenEval.h" />
     <ClInclude Include="fonts.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="images.h" />
@@ -184,6 +191,9 @@
   <ItemGroup>
     <Image Include="DeusExMachina.ico" />
     <Image Include="small.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="eval\SKConfig.h.in" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
