Start work on a GameManager

--- a/DeusExMachina.vcxproj
+++ b/DeusExMachina.vcxproj
@@ -152,9 +152,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Card.h" />
     <ClInclude Include="DeusExMachina.h" />
     <ClInclude Include="fonts.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="images.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
@@ -174,6 +176,7 @@
     <ClInclude Include="omp\OffsetTable.hxx" />
     <ClInclude Include="omp\Random.h" />
     <ClInclude Include="omp\Util.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
