--- a/DeusExMachina.vcxproj.filters
+++ b/DeusExMachina.vcxproj.filters
@@ -93,6 +93,15 @@
     <ClInclude Include="omp\EquityCalculator.h">
       <Filter>omp</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Card.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DeusExMachina.cpp">
