--- a/DeusExMachina.vcxproj
+++ b/DeusExMachina.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="Draw.h" />
     <ClInclude Include="fonts.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="images.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
@@ -185,11 +186,14 @@
     <ClInclude Include="omp\Util.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Table.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Card.cpp" />
     <ClCompile Include="DeusExMachina.cpp" />
     <ClCompile Include="Draw.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
@@ -201,6 +205,8 @@
     <ClCompile Include="omp\CombinedRange.cpp" />
     <ClCompile Include="omp\EquityCalculator.cpp" />
     <ClCompile Include="omp\HandEvaluator.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Table.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DeusExMachina.rc" />
